tests/baselines/reference/derivedUninitializedPropertyDeclaration.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration.ts(5,5): error TS2610: Class 'A' defines instance member property 'property', so extended class 'B' must provide an initializer with this override.
tests/cases/conformance/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration.ts(14,5): error TS2610: Class 'C' defines instance member property 'p', so extended class 'D' must provide an initializer with this override.


==== tests/cases/conformance/classes/propertyMemberDeclarations/derivedUninitializedPropertyDeclaration.ts (2 errors) ====
    class A {
        property = 'x';
    }
    class B extends A {
        property; // error
        ~~~~~~~~
!!! error TS2610: Class 'A' defines instance member property 'property', so extended class 'B' must provide an initializer with this override.
    }
    class BD extends A {
        declare property; // still has implicit any
    }
    class C {
        p: string;
    }
    class D extends C {
        p: 'hi'; // error
        ~
!!! error TS2610: Class 'C' defines instance member property 'p', so extended class 'D' must provide an initializer with this override.
    }
    class DD extends C {
        declare p: 'bye'; // ok
    }
    